--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
 
 <section class="slider1 cid-sksrqjJ9U2 mbr-fullscreen" id="slider1-1q">
     
-    <div class="carousel slide carousel-fade" id="sBkmltxho3" data-ride="carousel" data-interval="3000">
+    <div class="carousel slide carousel-fade" id="sBkq0TaLWu" data-ride="carousel" data-interval="3000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" class="active" data-target="#sBkmltxho3"></li>
-            <li data-slide-to="1" data-target="#sBkmltxho3"></li>
-            <li data-slide-to="2" data-target="#sBkmltxho3"></li><li data-slide-to="3" data-target="#sBkmltxho3"></li>
+            <li data-slide-to="0" class="active" data-target="#sBkq0TaLWu"></li>
+            <li data-slide-to="1" data-target="#sBkq0TaLWu"></li>
+            <li data-slide-to="2" data-target="#sBkq0TaLWu"></li><li data-slide-to="3" data-target="#sBkq0TaLWu"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item slider-image item active">
@@ -169,11 +169,11 @@
             </div>
             
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sBkmltxho3">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sBkq0TaLWu">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sBkmltxho3">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sBkq0TaLWu">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
@@ -296,7 +296,7 @@
                                 Nine Stars is extremely professional and easy to work with. They are constantly learning the new trends in the market and offer unique ideas on how to make your project your own!
                             </p>
                         </div>
-                        <div class="user_name mbr-fonts-style mb-2 display-4">Rajiv Mishra/</div>
+                        <div class="user_name mbr-fonts-style mb-2 display-4">Rajiv Mishra</div>
                         <div class="user_desk mbr-fonts-style display-4">&nbsp;Manager</div>
                     </div>
                 </div></div>
@@ -341,7 +341,7 @@
                 <p class="mbr-text mbr-fonts-style mb-4 display-4"></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=NINE STARS ,CHHAPAR" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=NINE STARS ,CHHAPAR" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
@@ -379,7 +379,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/l" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/c" style="color:#aaa;">This</a> web page was created with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/y" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to design your own site - <a href="https://mobirise.site/x" style="color:#aaa;">Find out</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
